# PetroGM_test

./: .gitignore  CMakeLists.txt  README.md  Тестовое задание №1547.docx
example/: main.cpp
example/files/: 1.txt  2.txt
src/: CMakeLists.txt  Makefile  simple_bmp.hpp
src/parser/: parser.cpp  parser.h
src/scene/: scene.cpp  scene.h
src/scene/core/: color3.h  pixel.h  vec2.h
src/scene/objects/include/: circle.h  dline.h  hline.h  object.h  point.h  rect.h  vline.h
src/scene/objects/src_files/: circle.cpp  dline.cpp  hline.cpp  object.cpp  point.cpp  rect.cpp  vline.cpp
